# poem-sqlx-learn

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 0001_book.sql
src/: config.rs  main.rs  models.rs
src/endpoints/: book.rs  mod.rs  users.rs
