[package]
name = "poem-sqlx-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = ["swagger-ui", "redoc", "rapidoc", "openapi-explorer"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
